Comment and remove shipment part

--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:52:42.633397Z",
-     "start_time": "2020-03-04T02:52:40.650635Z"
+     "end_time": "2020-03-20T08:50:19.491089Z",
+     "start_time": "2020-03-20T08:50:18.091696Z"
     }
    },
    "outputs": [],
@@ -36,19 +36,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:52:45.045097Z",
-     "start_time": "2020-03-04T02:52:44.975279Z"
+     "end_time": "2020-03-10T06:56:57.072743Z",
+     "start_time": "2020-03-10T06:56:57.062765Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=FULLSHIPVPOR;Trusted_Connection=yes\"\n",
+    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=FULLSHIPVPOR;Trusted_Connection=yes\"\n",
     "\n",
-    "table_name = 'FULLSHIPVPOR'\n",
+    "# table_name = 'FULLSHIPVPOR'\n",
     "\n",
-    "quoted = quote_plus(conn)\n",
-    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = db.create_engine(new_con, fast_executemany=True)"
+    "# quoted = quote_plus(conn)\n",
+    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "# engine = db.create_engine(new_con, fast_executemany=True)"
    ]
   },
   {
@@ -63,13 +63,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-24T07:40:25.633549Z",
-     "start_time": "2020-02-24T07:40:25.496555Z"
+     "end_time": "2020-03-20T08:59:14.698471Z",
+     "start_time": "2020-03-20T08:59:14.231809Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=TEST;UID=Admin;PWD=123\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR;UID=Admin;PWD=123789\"\n",
     "\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
@@ -77,7 +77,7 @@
     "\n",
     "connection = engine.connect()\n",
     "\n",
-    "table_name = 'TEST'"
+    "table_name = 'FULLSHIPVPOR'"
    ]
   },
   {
@@ -98,31 +98,31 @@
    },
    "outputs": [],
    "source": [
-    "shipment_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv',\n",
-    "    na_filter=False)\n",
-    "shipment_df = shipment_df[(shipment_df[['Qty']] != 0).all(axis=1)]\n",
-    "shipment_df = shipment_df.loc[(shipment_df['MPA'] != 'NKG-YUEYANG')]\n",
-    "shipment_df.to_sql(table_name,\n",
-    "                   engine,\n",
-    "                   if_exists='replace',\n",
-    "                   chunksize=None,\n",
-    "                   index=False,\n",
-    "                   dtype={\n",
-    "                       'FK': db.types.VARCHAR(length=50),\n",
-    "                       'SKU': db.types.VARCHAR(length=20),\n",
-    "                       'Platform': db.types.VARCHAR(length=50),\n",
-    "                       'Region': db.types.VARCHAR(length=8),\n",
-    "                       'MPA': db.types.VARCHAR(length=20),\n",
-    "                       'Target_Location': db.types.VARCHAR(length=20),\n",
-    "                       'WkDate': db.types.INTEGER(),\n",
-    "                       'ISO_WK_NR': db.types.INTEGER(),\n",
-    "                       'Qty': db.types.INTEGER(),\n",
-    "                       'YYYYWW': db.types.INTEGER(),\n",
-    "                       'QtyType': db.types.VARCHAR(length=4)\n",
-    "                   })\n",
-    "print(shipment_df.head())\n",
-    "print(shipment_df.shape)"
+    "# shipment_df = pd.read_csv(\n",
+    "#     r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\SHIPMENT\\Shipment.csv',\n",
+    "#     na_filter=False)\n",
+    "# shipment_df = shipment_df[(shipment_df[['Qty']] != 0).all(axis=1)]\n",
+    "# shipment_df = shipment_df.loc[(shipment_df['MPA'] != 'NKG-YUEYANG')]\n",
+    "# shipment_df.to_sql(table_name,\n",
+    "#                    engine,\n",
+    "#                    if_exists='replace',\n",
+    "#                    chunksize=None,\n",
+    "#                    index=False,\n",
+    "#                    dtype={\n",
+    "#                        'FK': db.types.VARCHAR(length=50),\n",
+    "#                        'SKU': db.types.VARCHAR(length=20),\n",
+    "#                        'Platform': db.types.VARCHAR(length=50),\n",
+    "#                        'Region': db.types.VARCHAR(length=8),\n",
+    "#                        'MPA': db.types.VARCHAR(length=20),\n",
+    "#                        'Target_Location': db.types.VARCHAR(length=20),\n",
+    "#                        'WkDate': db.types.INTEGER(),\n",
+    "#                        'ISO_WK_NR': db.types.INTEGER(),\n",
+    "#                        'Qty': db.types.INTEGER(),\n",
+    "#                        'YYYYWW': db.types.INTEGER(),\n",
+    "#                        'QtyType': db.types.VARCHAR(length=4)\n",
+    "#                    })\n",
+    "# print(shipment_df.head())\n",
+    "# print(shipment_df.shape)"
    ]
   },
   {
@@ -137,15 +137,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T05:58:57.018866Z",
-     "start_time": "2020-03-03T05:57:20.021551Z"
+     "end_time": "2020-03-20T08:51:53.892973Z",
+     "start_time": "2020-03-20T08:50:50.444785Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "por_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR\\2018_to_upload.csv',\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2020\\2020_to_upload.csv',\n",
     "    na_filter=False)\n",
     "por_df.to_sql(table_name,\n",
     "              engine,\n",
@@ -153,20 +153,18 @@
     "              chunksize=None,\n",
     "              index=False,\n",
     "              dtype={\n",
-    "                  'PK': db.types.VARCHAR(length=50),\n",
     "                  'Planning_Wk': db.types.VARCHAR(length=7),\n",
-    "                  'MPA': db.types.VARCHAR(length=20),\n",
-    "                  'SKU': db.types.VARCHAR(length=20),\n",
+    "                  'MPA': db.types.VARCHAR(length=50),\n",
+    "                  'SKU': db.types.VARCHAR(length=50),\n",
     "                  'Program': db.types.VARCHAR(length=50),\n",
     "                  'Platform': db.types.VARCHAR(length=50),\n",
     "                  'Product_Line': db.types.VARCHAR(length=2),\n",
     "                  'Target_Location': db.types.VARCHAR(length=20),\n",
-    "                  'WkDate': db.types.INTEGER(),\n",
     "                  'YYYYWW': db.types.INTEGER(),\n",
     "                  'Region': db.types.VARCHAR(length=8),\n",
     "                  'Qty': db.types.INTEGER(),\n",
-    "                  'FK': db.types.VARCHAR(length=50),\n",
-    "                  'QtyType': db.types.VARCHAR(length=4)\n",
+    "                  'QtyType': db.types.VARCHAR(length=4),\n",
+    "                  'DATES': db.types.Date\n",
     "              })\n",
     "print(por_df.head())\n",
     "print(por_df.shape)"
@@ -184,14 +182,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:59:01.089158Z",
-     "start_time": "2020-03-04T02:52:50.422391Z"
+     "end_time": "2020-03-20T09:03:52.548416Z",
+     "start_time": "2020-03-20T08:59:18.473542Z"
     }
    },
    "outputs": [],
    "source": [
     "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\FinalShipVPOR\\FinalShipVPOR.csv',\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\FULLSHIPVPOR\\FULLSHIPVPOR.csv',\n",
     "    na_filter=False)\n",
     "fullshipvpor_df.to_sql(table_name,\n",
     "                       engine,\n",
@@ -202,14 +200,22 @@
     "                           'Planning_Wk': db.types.VARCHAR(length=7),\n",
     "                           'YYYYWW': db.types.INTEGER(),\n",
     "                           'Region': db.types.VARCHAR(length=8),\n",
-    "                           'MPA': db.types.VARCHAR(length=20),\n",
+    "                           'MPA': db.types.VARCHAR(length=50),\n",
     "                           'Qty': db.types.INTEGER(),\n",
     "                           'QtyType': db.types.VARCHAR(length=4),\n",
-    "                           'Platform': db.types.VARCHAR(length=50)\n",
+    "                           'Platform': db.types.VARCHAR(length=50),\n",
+    "                           'DATES': db.types.Date\n",
     "                       })\n",
     "print(fullshipvpor_df.head())\n",
     "print(fullshipvpor_df.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
