--- a/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
+++ b/Waterfall/SQL SERVER/Con to SQL Server and Uploading to DB.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-20T08:50:19.491089Z",
-     "start_time": "2020-03-20T08:50:18.091696Z"
+     "end_time": "2020-04-21T10:59:22.478404Z",
+     "start_time": "2020-04-21T10:59:20.798093Z"
     }
    },
    "outputs": [],
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-10T06:56:57.072743Z",
-     "start_time": "2020-03-10T06:56:57.062765Z"
+     "end_time": "2020-04-21T10:59:22.485068Z",
+     "start_time": "2020-04-21T10:59:22.481075Z"
     }
    },
    "outputs": [],
@@ -60,24 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-20T08:59:14.698471Z",
-     "start_time": "2020-03-20T08:59:14.231809Z"
+     "end_time": "2020-04-21T10:59:30.726149Z",
+     "start_time": "2020-04-21T10:59:29.677272Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR;UID=Admin;PWD=123789\"\n",
+    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=POR;UID=Admin;PWD=123789\"\n",
     "\n",
-    "quoted = quote_plus(conn)\n",
-    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = db.create_engine(new_con, fast_executemany=True)\n",
+    "# quoted = quote_plus(conn)\n",
+    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "# engine = db.create_engine(new_con, fast_executemany=True)\n",
     "\n",
-    "connection = engine.connect()\n",
+    "# connection = engine.connect()\n",
     "\n",
-    "table_name = 'FULLSHIPVPOR'"
+    "# table_name = 'POR2019'"
    ]
   },
   {
@@ -134,40 +134,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-20T08:51:53.892973Z",
-     "start_time": "2020-03-20T08:50:50.444785Z"
+     "end_time": "2020-04-21T11:16:46.971624Z",
+     "start_time": "2020-04-21T11:01:05.253895Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Planning_Wk Product_Line            Platform              Program  \\\n",
+      "0     2019W02           2N  FENDER UIA REFRESH  FENDER UIA REFRESH    \n",
+      "1     2019W02           2N  FENDER UIA REFRESH  FENDER UIA REFRESH    \n",
+      "2     2019W02           2N  FENDER UIA REFRESH  FENDER UIA REFRESH    \n",
+      "3     2019W02           2N  FENDER UIA REFRESH  FENDER UIA REFRESH    \n",
+      "4     2019W02           2N  FENDER UIA REFRESH  FENDER UIA REFRESH    \n",
+      "\n",
+      "  Target_Location         SKU                MPA Region     Qty  YYYYWW  \\\n",
+      "0            H416  K7W98A#AB2  Foxconn ChongQing     AP   840.0  201903   \n",
+      "1            H416  K7W98A#AB2  Foxconn ChongQing     AP     0.0  201904   \n",
+      "2            H416  K7W98A#AB2  Foxconn ChongQing     AP  1410.0  201905   \n",
+      "3            H416  K7W98A#AB2  Foxconn ChongQing     AP     0.0  201906   \n",
+      "4            H416  K7W98A#AB2  Foxconn ChongQing     AP  1350.0  201907   \n",
+      "\n",
+      "        DATES QtyType  \n",
+      "0  2019-01-14     POR  \n",
+      "1  2019-01-21     POR  \n",
+      "2  2019-01-28     POR  \n",
+      "3  2019-02-04     POR  \n",
+      "4  2019-02-11     POR  \n",
+      "(3774264, 12)\n"
+     ]
+    }
+   ],
    "source": [
-    "por_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2020\\2020_to_upload.csv',\n",
-    "    na_filter=False)\n",
-    "por_df.to_sql(table_name,\n",
-    "              engine,\n",
-    "              if_exists='replace',\n",
-    "              chunksize=None,\n",
-    "              index=False,\n",
-    "              dtype={\n",
-    "                  'Planning_Wk': db.types.VARCHAR(length=7),\n",
-    "                  'MPA': db.types.VARCHAR(length=50),\n",
-    "                  'SKU': db.types.VARCHAR(length=50),\n",
-    "                  'Program': db.types.VARCHAR(length=50),\n",
-    "                  'Platform': db.types.VARCHAR(length=50),\n",
-    "                  'Product_Line': db.types.VARCHAR(length=2),\n",
-    "                  'Target_Location': db.types.VARCHAR(length=20),\n",
-    "                  'YYYYWW': db.types.INTEGER(),\n",
-    "                  'Region': db.types.VARCHAR(length=8),\n",
-    "                  'Qty': db.types.INTEGER(),\n",
-    "                  'QtyType': db.types.VARCHAR(length=4),\n",
-    "                  'DATES': db.types.Date\n",
-    "              })\n",
-    "print(por_df.head())\n",
-    "print(por_df.shape)"
+    "# por_df = pd.read_csv(\n",
+    "#     r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\DB\\POR\\POR2019\\2019_to_upload.csv',\n",
+    "#     na_filter=False)\n",
+    "# por_df.to_sql(table_name,\n",
+    "#               engine,\n",
+    "#               if_exists='replace',\n",
+    "#               chunksize=None,\n",
+    "#               index=False,\n",
+    "#               dtype={\n",
+    "#                   'Planning_Wk': db.types.VARCHAR(length=7),\n",
+    "#                   'MPA': db.types.VARCHAR(length=50),\n",
+    "#                   'SKU': db.types.VARCHAR(length=50),\n",
+    "#                   'Program': db.types.VARCHAR(length=50),\n",
+    "#                   'Platform': db.types.VARCHAR(length=50),\n",
+    "#                   'Product_Line': db.types.VARCHAR(length=2),\n",
+    "#                   'Target_Location': db.types.VARCHAR(length=20),\n",
+    "#                   'YYYYWW': db.types.INTEGER(),\n",
+    "#                   'Region': db.types.VARCHAR(length=8),\n",
+    "#                   'Qty': db.types.INTEGER(),\n",
+    "#                   'QtyType': db.types.VARCHAR(length=4),\n",
+    "#                   'DATES': db.types.Date\n",
+    "#               })\n",
+    "# print(por_df.head())\n",
+    "# print(por_df.shape)"
    ]
   },
   {
@@ -182,32 +210,32 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-20T09:03:52.548416Z",
-     "start_time": "2020-03-20T08:59:18.473542Z"
+     "end_time": "2020-04-17T09:07:35.038742Z",
+     "start_time": "2020-04-17T08:55:05.455294Z"
     }
    },
    "outputs": [],
    "source": [
-    "fullshipvpor_df = pd.read_csv(\n",
-    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\FULLSHIPVPOR\\FULLSHIPVPOR.csv',\n",
-    "    na_filter=False)\n",
-    "fullshipvpor_df.to_sql(table_name,\n",
-    "                       engine,\n",
-    "                       if_exists='replace',\n",
-    "                       chunksize=None,\n",
-    "                       index=False,\n",
-    "                       dtype={\n",
-    "                           'Planning_Wk': db.types.VARCHAR(length=7),\n",
-    "                           'YYYYWW': db.types.INTEGER(),\n",
-    "                           'Region': db.types.VARCHAR(length=8),\n",
-    "                           'MPA': db.types.VARCHAR(length=50),\n",
-    "                           'Qty': db.types.INTEGER(),\n",
-    "                           'QtyType': db.types.VARCHAR(length=4),\n",
-    "                           'Platform': db.types.VARCHAR(length=50),\n",
-    "                           'DATES': db.types.Date\n",
-    "                       })\n",
-    "print(fullshipvpor_df.head())\n",
-    "print(fullshipvpor_df.shape)"
+    "# fullshipvpor_df = pd.read_csv(\n",
+    "#     r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\DB\\FULLSHIPVPOR\\FULLSHIPVPOR.csv',\n",
+    "#     na_filter=False)\n",
+    "# fullshipvpor_df.to_sql(table_name,\n",
+    "#                        engine,\n",
+    "#                        if_exists='replace',\n",
+    "#                        chunksize=None,\n",
+    "#                        index=False,\n",
+    "#                        dtype={\n",
+    "#                            'Planning_Wk': db.types.VARCHAR(length=7),\n",
+    "#                            'YYYYWW': db.types.INTEGER(),\n",
+    "#                            'Region': db.types.VARCHAR(length=8),\n",
+    "#                            'MPA': db.types.VARCHAR(length=50),\n",
+    "#                            'Qty': db.types.INTEGER(),\n",
+    "#                            'QtyType': db.types.VARCHAR(length=4),\n",
+    "#                            'Platform': db.types.VARCHAR(length=50),\n",
+    "#                            'DATES': db.types.Date\n",
+    "#                        })\n",
+    "# print(fullshipvpor_df.head())\n",
+    "# print(fullshipvpor_df.shape)"
    ]
   },
   {
@@ -268,7 +296,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "368px"
+    "width": "367.997px"
    },
    "toc_section_display": true,
    "toc_window_display": true
