--- a/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
+++ b/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center> FULLSHIPVPOR </center></h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:07:45.827931Z",
-     "start_time": "2020-03-30T03:07:45.650886Z"
+     "end_time": "2020-04-23T13:11:43.625617Z",
+     "start_time": "2020-04-23T13:11:42.127786Z"
     }
    },
    "outputs": [],
@@ -24,13 +31,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:07:45.833910Z",
-     "start_time": "2020-03-30T03:07:45.829920Z"
+     "end_time": "2020-04-23T13:11:43.635272Z",
+     "start_time": "2020-04-23T13:11:43.628298Z"
     }
    },
    "outputs": [],
    "source": [
-    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\DB\\FULLSHIPVPOR'\n",
+    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Automation\\Database\\FULLSHIPVPOR'\n",
     "os.chdir(path)"
    ]
   },
@@ -38,14 +45,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Connection"
+    "#### Get data from database"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Local Server"
+    "**HP Server**"
    ]
   },
   {
@@ -53,34 +60,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:07:45.851862Z",
-     "start_time": "2020-03-30T03:07:45.836901Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=POR;Trusted_Connection=yes\"\n",
-    "# metadata = db.MetaData()\n",
-    "# quoted = quote_plus(conn)\n",
-    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "# engine = db.create_engine(new_con)\n",
-    "# metadata.reflect(bind=engine)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "External Server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-30T03:07:47.176216Z",
-     "start_time": "2020-03-30T03:07:45.855851Z"
+     "end_time": "2020-04-23T13:11:48.079972Z",
+     "start_time": "2020-04-23T13:11:45.165662Z"
     }
    },
    "outputs": [],
@@ -97,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# POR"
+    "**POR Data**"
    ]
   },
   {
@@ -105,8 +86,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:32.308336Z",
-     "start_time": "2020-03-30T03:07:47.181191Z"
+     "end_time": "2020-04-23T13:15:20.845663Z",
+     "start_time": "2020-04-23T13:11:50.038754Z"
     }
    },
    "outputs": [],
@@ -130,8 +111,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:32.351223Z",
-     "start_time": "2020-03-30T03:09:32.311328Z"
+     "end_time": "2020-04-23T13:15:23.980115Z",
+     "start_time": "2020-04-23T13:15:23.943207Z"
     }
    },
    "outputs": [],
@@ -144,8 +125,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:33.020567Z",
-     "start_time": "2020-03-30T03:09:32.355214Z"
+     "end_time": "2020-04-23T13:15:25.297971Z",
+     "start_time": "2020-04-23T13:15:24.766394Z"
     }
    },
    "outputs": [],
@@ -162,14 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHIPMENT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Local Server"
+    "**HP Server**"
    ]
   },
   {
@@ -177,35 +151,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:33.029507Z",
-     "start_time": "2020-03-30T03:09:33.023521Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=SHIPMENT;Trusted_Connection=yes\"\n",
-    "# metadata = db.MetaData()\n",
-    "# quoted = quote_plus(conn)\n",
-    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "# engine = db.create_engine(new_con)\n",
-    "# metadata.reflect(bind=engine)\n",
-    "# SHIPMENT = db.Table('SHIPMENT', metadata, autoload=True, autoload_with=engine)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "External Server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:33.735972Z",
-     "start_time": "2020-03-30T03:09:33.032497Z"
+     "end_time": "2020-04-23T13:15:31.752984Z",
+     "start_time": "2020-04-23T13:15:30.069775Z"
     }
    },
    "outputs": [],
@@ -220,12 +167,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SHIPMENT Data**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:34.271874Z",
-     "start_time": "2020-03-30T03:09:33.737959Z"
+     "end_time": "2020-04-23T13:15:34.508888Z",
+     "start_time": "2020-04-23T13:15:32.582710Z"
     }
    },
    "outputs": [],
@@ -244,8 +198,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:34.354165Z",
-     "start_time": "2020-03-30T03:09:34.273868Z"
+     "end_time": "2020-04-23T13:15:35.034275Z",
+     "start_time": "2020-04-23T13:15:34.949168Z"
     }
    },
    "outputs": [],
@@ -259,8 +213,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:34.378103Z",
-     "start_time": "2020-03-30T03:09:34.356161Z"
+     "end_time": "2020-04-23T13:15:35.354785Z",
+     "start_time": "2020-04-23T13:15:35.336826Z"
     }
    },
    "outputs": [],
@@ -273,8 +227,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:34.394577Z",
-     "start_time": "2020-03-30T03:09:34.382092Z"
+     "end_time": "2020-04-23T13:15:37.640022Z",
+     "start_time": "2020-04-23T13:15:37.634034Z"
     }
    },
    "outputs": [],
@@ -288,8 +242,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:47.104713Z",
-     "start_time": "2020-03-30T03:09:34.403548Z"
+     "end_time": "2020-04-23T13:15:57.499424Z",
+     "start_time": "2020-04-23T13:15:38.174296Z"
     }
    },
    "outputs": [],
@@ -308,8 +262,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:48.252744Z",
-     "start_time": "2020-03-30T03:09:47.108703Z"
+     "end_time": "2020-04-23T13:16:02.431832Z",
+     "start_time": "2020-04-23T13:16:01.582990Z"
     }
    },
    "outputs": [],
@@ -324,8 +278,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:48.631743Z",
-     "start_time": "2020-03-30T03:09:48.264711Z"
+     "end_time": "2020-04-23T13:16:03.519570Z",
+     "start_time": "2020-04-23T13:16:03.278597Z"
     }
    },
    "outputs": [],
@@ -342,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:53.076231Z",
-     "start_time": "2020-03-30T03:09:48.633732Z"
+     "end_time": "2020-04-23T13:16:12.608051Z",
+     "start_time": "2020-04-23T13:16:08.070216Z"
     }
    },
    "outputs": [],
@@ -357,8 +311,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:53.085212Z",
-     "start_time": "2020-03-30T03:09:53.079225Z"
+     "end_time": "2020-04-23T07:45:54.239435Z",
+     "start_time": "2020-04-23T07:45:54.234449Z"
     }
    },
    "outputs": [],
@@ -385,8 +339,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:09:55.112336Z",
-     "start_time": "2020-03-30T03:09:53.088202Z"
+     "end_time": "2020-04-23T07:45:57.635498Z",
+     "start_time": "2020-04-23T07:45:55.802365Z"
     }
    },
    "outputs": [],
@@ -396,18 +350,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Output to file and database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T03:10:30.115711Z",
-     "start_time": "2020-03-30T03:09:55.114329Z"
+     "end_time": "2020-04-23T07:53:08.859610Z",
+     "start_time": "2020-04-23T07:52:39.137886Z"
     }
    },
    "outputs": [],
    "source": [
     "FinalShipVPOR.to_csv('FULLSHIPVPOR.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T12:43:50.526649Z",
+     "start_time": "2020-04-23T12:43:46.997609Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=FULLSHIPVPOR;UID=Admin;PWD=123789\"\n",
+    "\n",
+    "quoted = quote_plus(conn)\n",
+    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "engine = db.create_engine(new_con, fast_executemany=True)\n",
+    "\n",
+    "connection = engine.connect()\n",
+    "\n",
+    "table_name = 'FULLSHIPVPOR'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T13:11:16.132046Z",
+     "start_time": "2020-04-23T12:58:56.417237Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "FinalShipVPOR.to_sql(table_name,\n",
+    "                       engine,\n",
+    "                       if_exists='replace',\n",
+    "                       chunksize=None,\n",
+    "                       index=False,\n",
+    "                       dtype={\n",
+    "                           'Planning_Wk': db.types.VARCHAR(length=7),\n",
+    "                           'YYYYWW': db.types.INTEGER(),\n",
+    "                           'Region': db.types.VARCHAR(length=8),\n",
+    "                           'MPA': db.types.VARCHAR(length=50),\n",
+    "                           'Qty': db.types.INTEGER(),\n",
+    "                           'QtyType': db.types.VARCHAR(length=4),\n",
+    "                           'Platform': db.types.VARCHAR(length=50),\n",
+    "                           'DATES': db.types.Date\n",
+    "                       })\n",
+    "print(FinalShipVPOR.head())\n",
+    "print(FinalShipVPOR.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -434,7 +454,7 @@
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
