Fixed date bug and changed excel source to APJ

--- a/Waterfall/POR/POR.ipynb
+++ b/Waterfall/POR/POR.ipynb
@@ -19,8 +19,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T10:46:57.321273Z",
-     "start_time": "2020-04-24T10:46:56.015686Z"
+     "end_time": "2020-04-27T02:01:50.515100Z",
+     "start_time": "2020-04-27T02:01:44.832835Z"
     }
    },
    "outputs": [],
@@ -40,8 +40,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T10:46:58.197755Z",
-     "start_time": "2020-04-24T10:46:58.189773Z"
+     "end_time": "2020-04-24T16:57:26.691001Z",
+     "start_time": "2020-04-24T16:57:26.677037Z"
     }
    },
    "outputs": [],
@@ -58,8 +58,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T10:47:04.542856Z",
-     "start_time": "2020-04-24T10:47:00.046640Z"
+     "end_time": "2020-04-24T16:57:33.064326Z",
+     "start_time": "2020-04-24T16:57:26.696983Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T10:47:05.351081Z",
-     "start_time": "2020-04-24T10:47:05.301192Z"
+     "end_time": "2020-04-24T16:57:33.165066Z",
+     "start_time": "2020-04-24T16:57:33.072307Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:01.416343Z",
-     "start_time": "2020-04-23T06:18:01.412352Z"
+     "end_time": "2020-04-24T16:57:33.179020Z",
+     "start_time": "2020-04-24T16:57:33.173036Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:01.882012Z",
-     "start_time": "2020-04-23T06:18:01.812169Z"
+     "end_time": "2020-04-24T16:57:33.322638Z",
+     "start_time": "2020-04-24T16:57:33.185004Z"
     }
    },
    "outputs": [],
@@ -122,8 +122,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:05.668203Z",
-     "start_time": "2020-04-23T06:18:05.596385Z"
+     "end_time": "2020-04-24T16:57:34.181637Z",
+     "start_time": "2020-04-24T16:57:33.326635Z"
     }
    },
    "outputs": [],
@@ -132,7 +132,8 @@
     "                     id_vars=Col,\n",
     "                     value_vars=Dates,\n",
     "                     value_name='Value',\n",
-    "                     var_name='Attribute')"
+    "                     var_name='Attribute')\n",
+    "latest_por.iloc[:,10] = latest_por.iloc[:,10].apply(pd.to_datetime)"
    ]
   },
   {
@@ -140,8 +141,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:08.369114Z",
-     "start_time": "2020-04-23T06:18:08.335206Z"
+     "end_time": "2020-04-24T16:57:34.224511Z",
+     "start_time": "2020-04-24T16:57:34.186613Z"
     }
    },
    "outputs": [],
@@ -154,8 +155,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:12.737896Z",
-     "start_time": "2020-04-23T06:18:12.724933Z"
+     "end_time": "2020-04-24T16:57:47.912564Z",
+     "start_time": "2020-04-24T16:57:47.888628Z"
     }
    },
    "outputs": [],
@@ -168,8 +169,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:15.119798Z",
-     "start_time": "2020-04-23T06:18:15.116798Z"
+     "end_time": "2020-04-24T16:57:49.646744Z",
+     "start_time": "2020-04-24T16:57:49.641757Z"
     }
    },
    "outputs": [],
@@ -184,8 +185,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:17.162800Z",
-     "start_time": "2020-04-23T06:18:15.981926Z"
+     "end_time": "2020-04-24T16:58:00.469030Z",
+     "start_time": "2020-04-24T16:57:58.564650Z"
     }
    },
    "outputs": [],
@@ -207,8 +208,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:19.879518Z",
-     "start_time": "2020-04-23T06:18:19.875519Z"
+     "end_time": "2020-04-24T17:01:11.642392Z",
+     "start_time": "2020-04-24T17:01:11.638403Z"
     }
    },
    "outputs": [],
@@ -222,8 +223,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:20.177709Z",
-     "start_time": "2020-04-23T06:18:20.172721Z"
+     "end_time": "2020-04-24T17:01:12.434691Z",
+     "start_time": "2020-04-24T17:01:12.428707Z"
     }
    },
    "outputs": [],
@@ -237,8 +238,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:23.376182Z",
-     "start_time": "2020-04-23T06:18:20.475909Z"
+     "end_time": "2020-04-24T17:01:26.634596Z",
+     "start_time": "2020-04-24T17:01:20.724240Z"
     }
    },
    "outputs": [],
@@ -257,8 +258,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:34.683571Z",
-     "start_time": "2020-04-23T06:18:23.378141Z"
+     "end_time": "2020-04-24T17:12:35.861066Z",
+     "start_time": "2020-04-24T17:12:13.661733Z"
     }
    },
    "outputs": [],
@@ -286,14 +287,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:34.740379Z",
-     "start_time": "2020-04-23T06:18:34.686522Z"
+     "end_time": "2020-04-27T02:01:56.184496Z",
+     "start_time": "2020-04-27T02:01:55.853818Z"
     }
    },
    "outputs": [],
    "source": [
     "df_region = pd.read_excel(\n",
-    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\DB\\Country of Target Location\\Country of Target Location.xlsx',\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Previous DB\\Country of Target Location\\Country of Target Location.xlsx',\n",
     "    sheet_name='Country of Target Location',\n",
     "    na_filter=False,\n",
     "    usecols='A:B')"
@@ -304,8 +305,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:35.637099Z",
-     "start_time": "2020-04-23T06:18:34.746369Z"
+     "end_time": "2020-04-24T17:13:05.255842Z",
+     "start_time": "2020-04-24T17:13:03.073911Z"
     }
    },
    "outputs": [],
@@ -321,8 +322,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:35.646078Z",
-     "start_time": "2020-04-23T06:18:35.639094Z"
+     "end_time": "2020-04-24T17:13:05.269804Z",
+     "start_time": "2020-04-24T17:13:05.260828Z"
     }
    },
    "outputs": [],
@@ -349,8 +350,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:35.954251Z",
-     "start_time": "2020-04-23T06:18:35.649068Z"
+     "end_time": "2020-04-24T17:13:27.944732Z",
+     "start_time": "2020-04-24T17:13:27.219673Z"
     }
    },
    "outputs": [],
@@ -364,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:36.380619Z",
-     "start_time": "2020-04-23T06:18:35.956246Z"
+     "end_time": "2020-04-24T17:13:47.182539Z",
+     "start_time": "2020-04-24T17:13:46.482069Z"
     }
    },
    "outputs": [],
@@ -383,8 +384,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:36.649521Z",
-     "start_time": "2020-04-23T06:18:36.382614Z"
+     "end_time": "2020-04-24T17:13:58.905602Z",
+     "start_time": "2020-04-24T17:13:58.577433Z"
     }
    },
    "outputs": [],
@@ -405,20 +406,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T06:18:36.685384Z",
-     "start_time": "2020-04-23T06:18:36.651473Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_final_por"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,8 +417,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:26:27.847524Z",
-     "start_time": "2020-04-23T06:26:27.843542Z"
+     "end_time": "2020-04-24T17:15:31.869221Z",
+     "start_time": "2020-04-24T17:15:31.864233Z"
     }
    },
    "outputs": [],
@@ -444,8 +431,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:26:44.742405Z",
-     "start_time": "2020-04-23T06:26:28.258526Z"
+     "end_time": "2020-04-24T17:16:04.250080Z",
+     "start_time": "2020-04-24T17:15:37.226009Z"
     }
    },
    "outputs": [],
